<resources>
    <string name="app_name">Covidata2019</string>

    <!-- Main activity -->
    <string name="Title">Covidata2019</string>
    <string name="description">Avec Covidata2019, soyez les premiers informez sur l\'état de l\'épidémie</string>
    <string name="appby">App by:</string>
    <string name="byXF">Xavier Facqueur</string>
    <string name="bySD">Samory Diaby</string>
    <string name="byGKC">Goh-Kenedja Coulibaly</string>

    <string name="DataBtn">Data</string>
    <string name="GraphBtn">Graph</string>
    <string name="MysteryBtn">Barrier gestures</string>
    <string name="MadebyEpita">Made at Epita</string>

    <!-- Data activity -->
    <string name="Totals">Totals</string>
    <string name="World">World</string>
    <string name="Confirmed">Confirmed:</string>
    <string name="Deaths">Deaths:</string>
    <string name="Recovered">Recovered:</string>
    <string name="ByContry">By country</string>
    <string name="activity_data_confirmed_count">0</string>
    <string name="activity_data_deaths_count">0</string>
    <string name="activity_data_Recovered_count">0</string>


    <!-- Country Data activity -->
    <string name="activity_country_data_country_text">Country</string>

    <!-- Country Data activity -->
    <string name="activity_graph_data_confirmed_text">Confirmed</string>
    <string name="activity_graph_data_deaths_text">Deaths</string>
    <string name="activity_graph_data_recovered_text">Recovered</string>

    <string name="activity_graph_data_confirmed_count">No data yet</string>
    <string name="activity_graph_data_deaths_count">No data yet</string>
    <string name="activity_graph_data_recovered_count">No data yet</string>

    <string name="bras">Toussez ou éternuez dans son coude ou dans un mouchoir</string>
    <string name="lavez">Se laver très régulierement les mains</string>
    <string name="mouchoir">Utiliser un mouchoir à usage unique et le jeter</string>
    <string name="serez">Saluer sans se serrer la main, éviter les embrassades</string>

</resources>
