<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data">

    <TextView
        android:id="@+id/Totals"
        android:layout_width="106dp"
        android:layout_height="39dp"
        android:layout_marginTop="62dp"
        android:text="@string/Totals"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ByCountry"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="42dp"
        android:text="@string/ByContry"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recovered" />

    <TextView
        android:id="@+id/World"
        android:layout_width="106dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/World"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Totals" />

    <TextView
        android:id="@+id/Recovered"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="10dp"
        android:text="@string/Recovered"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Deaths" />

    <TextView
        android:id="@+id/Deaths"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="10dp"
        android:text="@string/Deaths"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Confirmed" />

    <TextView
        android:id="@+id/Confirmed"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/Confirmed"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/World" />

    <TextView
        android:id="@+id/Recoveredcpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_data_Recovered_count"
        app:layout_constraintStart_toEndOf="@+id/Recovered"
        app:layout_constraintTop_toTopOf="@+id/Recovered" />

    <TextView
        android:id="@+id/Deathcpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_data_deaths_count"
        app:layout_constraintStart_toEndOf="@+id/Deaths"
        app:layout_constraintTop_toTopOf="@+id/Deaths" />

    <TextView
        android:id="@+id/Confirmedcpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_data_confirmed_count"
        app:layout_constraintStart_toEndOf="@+id/Confirmed"
        app:layout_constraintTop_toTopOf="@+id/Confirmed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_data_list_countries"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ByCountry" />
</androidx.constraintlayout.widget.ConstraintLayout>