<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_country_data_country_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        tools:text="Country" />

    <TextView
        android:id="@+id/activity_country_data_confirmed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/Confirmed"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_country_data_country_text" />

    <TextView
        android:id="@+id/activity_country_data_deaths_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/Deaths"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_country_data_confirmed_text" />

    <TextView
        android:id="@+id/activity_country_data_recovered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/Recovered"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_country_data_deaths_text" />

    <TextView
        android:id="@+id/activity_country_data_confirmed_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/activity_country_data_confirmed_text"
        app:layout_constraintStart_toEndOf="@+id/activity_country_data_confirmed_text"
        app:layout_constraintTop_toTopOf="@+id/activity_country_data_confirmed_text" />

    <TextView
        android:id="@+id/activity_country_data_deaths_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/activity_country_data_deaths_text"
        app:layout_constraintStart_toEndOf="@+id/activity_country_data_deaths_text"
        app:layout_constraintTop_toTopOf="@+id/activity_country_data_deaths_text" />

    <TextView
        android:id="@+id/activity_country_data_recovered_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/activity_country_data_recovered_text"
        app:layout_constraintStart_toEndOf="@+id/activity_country_data_recovered_text"
        app:layout_constraintTop_toTopOf="@+id/activity_country_data_recovered_text" />
</androidx.constraintlayout.widget.ConstraintLayout>