<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MysteryActivity">

    <HorizontalScrollView
        android:id="@+id/HSV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="407dp"
                android:layout_height="363dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lavez"
                android:textAlignment="center"
                android:textSize="29sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="390dp"
                app:layout_constraintGuide_percent="0.5" />

            <LinearLayout
                android:id="@+id/linearLayoutImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="407dp"
                android:layout_height="363dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bras"
                android:textAlignment="center"
                android:textSize="29sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.294" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="407dp"
                android:layout_height="363dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mouchoir"
                android:textAlignment="center"
                android:textSize="29sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="407dp"
                android:layout_height="363dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/serez"
                android:textAlignment="center"
                android:textSize="29sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="409dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bras" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="407dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintStart_toEndOf="@+id/imageView15"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lavez_mains" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="407dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mouchoir" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="407dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintStart_toEndOf="@+id/imageView19"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mains" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>